[package]
name = "spreadsheet_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecow = { version = "0.2.2", features = [ "serde" ] }
indexmap = { version = "2.5.0", features = [ "serde" ] }
pest = "2.7.11"
pest_derive = "2.7.11"
rust_xlsxwriter = { version = "0.75.0", features = ["chrono"] }
serde = { version = "1.0.210", features = ["derive"] }
csv = "1.3.0"
thiserror = "1.0.68"
